force-app/main/default/objects/Opportunity/fields/AddMonth__c.field-meta.xml
<CustomField>
    <fullName>AddMonth__c</fullName>
    <formula>DATE( YEAR( CloseDate )+2 , MONTH( CloseDate )+3 , DAY( CloseDate )+10 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AddMonth</label>
    <type>Date</type>
</CustomField>