force-app/main/default/objects/Opportunity/fields/Contribution_Level__c.field-meta.xml
<CustomField>
    <fullName>Contribution_Level__c</fullName>
    <formula>IF( Contribution_Percentage__c  &lt;= 0.10 , &apos;Low&apos;,IF( Contribution_Percentage__c &gt; 0.10 &amp;&amp; Contribution_Percentage__c &lt; 0.40, &apos;Medium&apos;,&apos;High&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contribution Level</label>
    <type>Text</type>
</CustomField>