force-app/main/default/objects/Opportunity/fields/order_Approval_derste_kurdum__c.field-meta.xml
<CustomField>
    <fullName>order_Approval_derste_kurdum__c</fullName>
    <label>order Approval derste kurdum</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>