force-app/main/default/objects/Opportunity/fields/Practice1__c.field-meta.xml
<CustomField>
    <fullName>Practice1__c</fullName>
    <description>additions of absolute value of 40,70,-40</description>
    <formula>ABS(40) + ABS(70) + ABS(-40)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Practice1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>