force-app/main/default/objects/Opportunity/fields/Practice2__c.field-meta.xml
<CustomField>
    <fullName>Practice2__c</fullName>
    <formula>TEXT( ABS(40) )  &amp;  TEXT( ABS(70) ) &amp;  TEXT( ABS(-40) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Practice2</label>
    <type>Text</type>
</CustomField>