force-app/main/default/objects/Opportunity/fields/practice3__c.field-meta.xml
<CustomField>
    <fullName>practice3__c</fullName>
    <description>line by line</description>
    <formula>TEXT( ABS(40) )  &amp; BR()  &amp;  TEXT( ABS(70) )   &amp;  BR()  &amp;  TEXT( ABS(-40) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>practice3</label>
    <type>Text</type>
</CustomField>