force-app/main/default/objects/Opportunity/validationRules/Amount.validationRule-meta.xml
<ValidationRule>
    <fullName>Amount</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL( StageName , &apos;Closed lost&apos;) &amp;&amp;  ISBLANK( Amount )</errorConditionFormula>
    <errorMessage>If the Stage is &apos;Closed Lost&apos;, &apos;Amount&apos; can not be empty</errorMessage>
</ValidationRule>