force-app/main/default/objects/Opportunity/validationRules/Aproval_Status.validationRule-meta.xml
<ValidationRule>
    <fullName>Aproval_Status</fullName>
    <active>true</active>
    <description>Closed oppurtunities with Amount greater than $50000 must be approved.</description>
    <errorConditionFormula>AND(OR( ISPICKVAL( StageName , &apos;Closed Lost&apos;) , ISPICKVAL( StageName , &apos;Closed Won&apos;) ) ,
Amount  &gt; 50000,
NOT(ISPICKVAL( Aproval_Status__c , &apos;Approved&apos;)) )</errorConditionFormula>
    <errorMessage>Closed oppurtunities with Amount greater than $50000 must be approved.</errorMessage>
</ValidationRule>