force-app/main/default/objects/Opportunity/validationRules/OppAmount.validationRule-meta.xml
<ValidationRule>
    <fullName>OppAmount</fullName>
    <active>true</active>
    <description>Opportunity Amount must be positive and no more than $10 million</description>
    <errorConditionFormula>AND( ISNEW() , OR( Amount &lt; 0,Amount &gt; 10000000))</errorConditionFormula>
    <errorDisplayField>Amount</errorDisplayField>
    <errorMessage>Opportunity Amount must be positive and no more than $10 million</errorMessage>
</ValidationRule>