force-app/main/default/objects/Opportunity/validationRules/Ordernumber.validationRule-meta.xml
<ValidationRule>
    <fullName>Ordernumber</fullName>
    <active>true</active>
    <errorConditionFormula>OR ( OrderNumber__c  &lt; 0 ,
 MOD( OrderNumber__c ,2) &lt;&gt; 0 )</errorConditionFormula>
    <errorDisplayField>OrderNumber__c</errorDisplayField>
    <errorMessage>Order Number must be non-negative even number</errorMessage>
</ValidationRule>